[gd_scene load_steps=17 format=3 uid="uid://cvyoh2kfmu53j"]

[ext_resource type="Script" path="res://scripts/FrostEnemy.gd" id="1_r8odi"]
[ext_resource type="Script" path="res://scripts/ProgressBar.gd" id="2_2k50d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_jfhsk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_dtwnp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_6ks61"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_fp4k3"]
[ext_resource type="PackedScene" uid="uid://cs2hhjwx8mesy" path="res://assets/donutEnemyBasicToxic.glb" id="8_h2ys7"]
[ext_resource type="PackedScene" uid="uid://d3aqk14ynor40" path="res://assets/donutEnemyFrost.glb" id="8_yx7aj"]
[ext_resource type="PackedScene" uid="uid://bqqtx3wheh4c1" path="res://scenes/game/death.tscn" id="9_jkmt1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tw1dr"]
bg_color = Color(0.821751, 0.00123147, 0.000674889, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2ep8"]
bg_color = Color(0.356869, 0.603331, 0.147863, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_y23dk"]
viewport_path = NodePath("Healthbar")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nybh2"]
height = 0.476285
radius = 0.704485

[sub_resource type="Animation" id="Animation_2crbv"]
resource_name = "Despawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/donutEnemyFrost:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ltkj5"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path3D/PathFollow3D/donutEnemyFrost:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q21hm"]
_data = {
"Despawn": SubResource("Animation_2crbv"),
"Spawn": SubResource("Animation_ltkj5")
}

[node name="FrostEnemy" type="Node3D"]
script = ExtResource("1_r8odi")

[node name="Healthbar" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="Healthbar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -8.0
offset_right = 64.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tw1dr")
theme_override_styles/fill = SubResource("StyleBoxFlat_o2ep8")
max_value = 600.0
value = 600.0
show_percentage = false
script = ExtResource("2_2k50d")

[node name="EnemyStateChart" type="Node" parent="."]
script = ExtResource("3_jfhsk")

[node name="CompoundState" type="Node" parent="EnemyStateChart"]
script = ExtResource("4_dtwnp")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_6ks61")

[node name="ToTravelling" type="Node" parent="EnemyStateChart/CompoundState/Spawning"]
script = ExtResource("6_fp4k3")
to = NodePath("../../Travelling")
event = &"to_travelling"
delay_in_seconds = "0.0"

[node name="Travelling" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_6ks61")

[node name="ToDespawning" type="Node" parent="EnemyStateChart/CompoundState/Travelling"]
script = ExtResource("6_fp4k3")
to = NodePath("../../Despawning")
event = &"to_despawning"
delay_in_seconds = "0.0"

[node name="dying" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_6ks61")

[node name="Despawning" type="Node" parent="EnemyStateChart/CompoundState"]
script = ExtResource("5_6ks61")

[node name="Path3D" type="Path3D" parent="."]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-0.287841, 0, 0.957675, 0, 1, 0, -0.957675, 0, -0.287841, -0.0485325, 0, 3.29746)
progress = 18.9926
loop = false

[node name="healthbarender" type="Sprite3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.25)
texture = SubResource("ViewportTexture_y23dk")

[node name="donutEnemyBasicToxic" parent="Path3D/PathFollow3D" instance=ExtResource("8_h2ys7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="donutEnemyFrost" parent="Path3D/PathFollow3D" instance=ExtResource("8_yx7aj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="death" parent="Path3D/PathFollow3D" instance=ExtResource("9_jkmt1")]

[node name="Area3DRegDetect" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3DRegDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0111318, 0.548822, 0.0270461)
shape = SubResource("CylinderShape3D_nybh2")

[node name="Area3DToxicDetect" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3DToxicDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0111318, 0.548822, 0.0270461)
shape = SubResource("CylinderShape3D_nybh2")

[node name="Area3DFrostDetect" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3DFrostDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0111318, 0.548822, 0.0270461)
shape = SubResource("CylinderShape3D_nybh2")

[node name="Area3DFireDetect" type="Area3D" parent="Path3D/PathFollow3D"]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/PathFollow3D/Area3DFireDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0111318, 0.548822, 0.0270461)
shape = SubResource("CylinderShape3D_nybh2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q21hm")
}

[connection signal="state_entered" from="EnemyStateChart/CompoundState/Spawning" to="." method="_on_spawning_state_entered"]
[connection signal="state_processing" from="EnemyStateChart/CompoundState/Travelling" to="." method="_on_travelling_state_processing"]
[connection signal="state_entered" from="EnemyStateChart/CompoundState/Despawning" to="." method="_on_despawning_state_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3DRegDetect" to="." method="_on_area_3d_reg_detect_area_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3DToxicDetect" to="." method="_on_area_3d_toxic_detect_area_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3DFrostDetect" to="." method="_on_area_3d_frost_detect_area_entered"]
[connection signal="area_entered" from="Path3D/PathFollow3D/Area3DFireDetect" to="." method="_on_area_3d_fire_detect_area_entered"]
